exports[`Storyshots Modal Context Positive 1`] = `
<h1
  className="StorybookExample--negative">
  Hello from 
  a Stranger
  !
</h1>
`;

exports[`Storyshots Modal Context Primary 1`] = `
<h1
  className="StorybookExample--primary">
  Hello from 
  a Stranger
  !
</h1>
`;

exports[`Storyshots Modal Context Secondary 1`] = `
<h1
  className="StorybookExample--secondary">
  Hello from 
  a Stranger
  !
</h1>
`;

exports[`Storyshots StorybookExample Phrase With default props 1`] = `
<h1
  className="StorybookExample--primary">
  Hello from 
  a Stranger
  !
</h1>
`;

exports[`Storyshots StorybookExample Phrase With phrase Matt 1`] = `
<h1
  className="StorybookExample--primary">
  Hello from 
  Matt
  !
</h1>
`;

exports[`Storyshots StorybookExample Phrase With phrase the other side 1`] = `
<h1
  className="StorybookExample--primary">
  Hello from 
  the other side
  !
</h1>
`;

exports[`test should mount my modal 1`] = `
<StorybookExample
  className="StorybookExample--primary"
  phrase="Jest">
  <h1
    className="StorybookExample--primary">
    Hello from 
    Jest
    !
  </h1>
</StorybookExample>
`;

exports[`test should render my modal 1`] = `
<h1
  class="StorybookExample--primary">
  Hello from Jest!
</h1>
`;

exports[`test should shallow my modal 1`] = `
<h1
  className="StorybookExample--primary">
  Hello from 
  Jest
  !
</h1>
`;
